5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1712_2504.log
== TEST (2019-05-13 15:22:28) 
-- CODE:
qic = int(input("qtd de virus: "))
qil = int(input("qtd de leucocitos: "))
per1 = float(input("virus: "))
per2 = float(input("leuco: "))

v = qic #acumuladora de virus
l = qil #acumuladora de leucocitos
c = 0 #dias corridos

while(v < 2 * l):
	v = v + ((v * per2) / 100)
	l = l + ((l * per1) / 100)
	t = t + 1

print(t)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(t)
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:22:51) 
-- CODE:
qic = int(input("qtd de virus: "))
qil = int(input("qtd de leucocitos: "))
per1 = float(input("virus: "))
per2 = float(input("leuco: "))

v = qic #acumuladora de virus
l = qil #acumuladora de leucocitos
c = 0 #dias corridos

while(v < 2 * l):
	v = v + ((v * per2) / 100)
	l = l + ((l * per1) / 100)
	c = c + 1

print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(t)
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:23:04) 
-- CODE:
qic = int(input("qtd de virus: "))
qil = int(input("qtd de leucocitos: "))
per1 = float(input("virus: "))
per2 = float(input("leuco: "))

v = qic #acumuladora de virus
l = qil #acumuladora de leucocitos
c = 0 #dias corridos

while(v < 2 * l):
	v = v + ((v * per2) / 100)
	l = l + ((l * per1) / 100)
	c = c + 1

print(c)
	
-- EXECUTION TIME:
0.132388
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
0
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
0
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:23:29) 
-- CODE:
qic = int(input("qtd de virus: "))
qil = int(input("qtd de leucocitos: "))
per1 = float(input("virus: "))
per2 = float(input("leuco: "))

v = qil #acumuladora de virus
l = qic #acumuladora de leucocitos
c = 0 #dias corridos

while(v < 2 * l):
	v = v + ((v * per2) / 100)
	l = l + ((l * per1) / 100)
	c = c + 1

print(c)
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:23:39) 
-- CODE:
qic = int(input("qtd de virus: "))
qil = int(input("qtd de leucocitos: "))
per1 = float(input("virus: "))
per2 = float(input("leuco: "))

v = qil #acumuladora de virus
l = qic #acumuladora de leucocitos
c = 0 #dias corridos

while(v < 2 * l):
	v = v + ((v * per2) / 100)
	l = l + ((l * per1) / 100)
	c = c + 1

print(c)
	
-- EXECUTION TIME:
0.173889
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
